[Fix] Rework scroller and split components into component containers jmix-framework/jmix#1104